# mavlink-sdk

./: README.md
mavlink/: CMakeLists.txt  Doxyfile
mavlink/include/legacy/: aimilink_interface.h  generic_port.h  linux_serial.h  mavlink_interface.h
mavlink/include/mavlink_protocol/: mavlink_helpers.h
mavlink/include/mavlink_protocol/aimirobot/: aimirobot.h  mavlink.h  mavlink_msg_analog.h  mavlink_msg_attitude.h  mavlink_msg_command_ack.h  mavlink_msg_command_long.h  mavlink_msg_gpio.h  mavlink_msg_heartbeat.h  mavlink_msg_infrared.h  mavlink_msg_param_request_list.h  mavlink_msg_param_request_read.h  mavlink_msg_param_set.h  mavlink_msg_ping.h  mavlink_msg_scaled_imu.h  mavlink_msg_sys_core_status.h  mavlink_msg_sys_info_version.h  mavlink_msg_torque.h  mavlink_msg_twist.h  mavlink_msg_ultrasonic.h  testsuite.h  version.h
mavlink/include/message_definition/: aimirobot.xml
mavlink/src/: linux_serial.cpp  mavlink_interface.cpp
